# embedded-graphics-sparklines

./: Cargo.toml  README.md
src/: lib.rs  main.rs
