[package]
name = "embedded-graphics-sparklines"
version = "0.0.1"
edition = "2021"
authors = ["Bernard Kobos <bkobos@gmail.com>"]
license = "MIT"
description = "Sparklines for rust's embedded-graphics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7"
embedded-graphics-simulator = {version = "0.3.0", optional = true}
rand = {version = "0.8", optional = true}

[features]
build-binary = ["rand", "embedded-graphics-simulator"]

[[bin]]
name = "embedded-graphics-sparklines"
required-features = ["build-binary"]